==> joytianya/n_dwsdk/SDK/Firmware/DW3_QM33_SDK_1.0.2/Src/HAL/Src/nrfx/HAL_DW3000.c <==
#include <stdint.h>
#include "nrf_drv_gpiote.h"
#include "nrf_drv_spi.h"
#include "deca_interface.h"
#include "HAL_error.h"
#include "HAL_uwb.h"
#include "HAL_gpio.h"
#include "nrf_delay.h"
#include "nrf_drv_clock.h"
#include "qirq.h"
#include "custom_board.h"
#include "nrf_sdh.h"

static void hal_uwb_disable_irq(void)
{
    /* Unfortunately NRF chip has only 1 IRQ for all GPIO pins. */
    nrf_drv_gpiote_in_event_disable(hal_uwb.uwbs->ext_io_cfg->irqPin);
}

static void hal_uwb_enable_irq(void)
{
    nrf_drv_gpiote_in_event_enable(hal_uwb.uwbs->ext_io_cfg->irqPin, true);
}

static void hal_uwb_reset_chip(void)
{
    nrf_gpio_cfg_output(hal_uwb.uwbs->ext_io_cfg->rstPin);
    nrf_gpio_pin_clear(hal_uwb.uwbs->ext_io_cfg->rstPin);
    nrf_delay_us(200);
    nrf_gpio_cfg_input(hal_uwb.uwbs->ext_io_cfg->rstPin, NRF_GPIO_PIN_NOPULL);
    hal_uwb_sleep_status_set(UWB_IS_NOT_SLEEPING);
    nrf_delay_us(1500);
}

error_e hal_uwb_disable_irq_and_reset(int reset)
{
    unsigned int lock;

    lock = qirq_lock();
    /* Disable NVIC IRQ until we configure the device. */
    hal_uwb_disable_irq();

    /* This is called to reset the DW device. */
    if (reset)
    {
        hal_uwb_reset_chip();
    }

    hal_uwb_sleep_mode_set(UWB_CANNOT_SLEEP);
    hal_uwb_sleep_status_set(UWB_IS_NOT_SLEEPING);

    qirq_unlock(lock);

    return _NO_ERR;
}

decaIrqStatus_t decamutexon(void)
{
    /* NRF chip has only 1 IRQ for all GPIO pins.
     * Disabling of the NVIC would not be of the best ideas.
     */
    uint32_t s = nrf_drv_gpiote_in_is_set(hal_uwb.uwbs->ext_io_cfg->irqPin);
    if (s)
    {
        nrf_drv_gpiote_in_event_disable(hal_uwb.uwbs->ext_io_cfg->irqPin);
    }
    return 0;
}

void decamutexoff(decaIrqStatus_t s)
{
    if (s)
    {
        nrf_drv_gpiote_in_event_enable(hal_uwb.uwbs->ext_io_cfg->irqPin, true);
    }
}

static inline GPIO_PinState port_CheckEXT_IRQ(void)
{
    GPIO_PinState ret = GPIO_PIN_RESET;

    if (nrf_gpio_pin_read(hal_uwb.uwbs->ext_io_cfg->irqPin))
    {
        ret = GPIO_PIN_SET;
    }

    return ret;
}

void hal_uwb_init_irq(void)
{
    ret_code_t err_code;

    /* Uninit is for compatibility when using uwb-stack/llhw simultaneously. */
    nrf_drv_gpiote_uninit();
    err_code = nrf_drv_gpiote_init();
    APP_ERROR_CHECK(err_code);

    nrf_drv_gpiote_in_config_t in_config = GPIOTE_CONFIG_IN_SENSE_LOTOHI(true);
    in_config.pull = NRF_GPIO_PIN_PULLDOWN;

    err_code = nrf_drv_gpiote_in_init(hal_uwb.uwbs->ext_io_cfg->irqPin, &in_config, deca_irq_handler);
    APP_ERROR_CHECK(err_code);

    nrf_drv_gpiote_in_event_enable(hal_uwb.uwbs->ext_io_cfg->irqPin, false);
}
